--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "",
+  "name": "service-site",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "css": "tailwindcss -c ./tailwind.config.mjs -i ./src/styles/input.css -o ./public/styles/global.css  --minify --watch"
   },
   "dependencies": {
-    "astro": "^4.4.9"
+    "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vue": "^4.0.8",
+    "astro": "^4.4.9",
+    "astro-compress": "^2.2.11",
+    "autoprefixer": "^10.4.18",
+    "cssnano": "^6.0.5",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
+    "vue": "^3.4.21"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
+    "daisyui": "^4.7.2"
   }
 }
