--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,20 @@
 {
-  "extends": "astro/tsconfigs/base"
+  "extends": "astro/tsconfigs/base",
+  "compilerOptions": {
+    "jsx": "preserve"
+  },
+  "strictNullChecks": false,
+  "plugins": [
+    {
+      "name": "@astrojs/ts-plugin"
+    },
+  ],
+  "baseUrl": ".",
+  "paths": {
+    "@/*": ["src/*"],
+    "@components/*": ["src/components/*"],
+    "@layouts/*": ["src/layouts/*"]
+  },
+  "allowJs": true,
 }
+
