--- a/package.json
+++ b/package.json
@@ -12,14 +12,12 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.0",
-    "@astrojs/vue": "^4.0.8",
-    "astro": "^4.4.9",
+    "astro": "^4.5.1",
     "astro-compress": "^2.2.11",
     "autoprefixer": "^10.4.18",
     "cssnano": "^6.0.5",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "vue": "^3.4.21"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.10",
