--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "css": "tailwindcss -c ./tailwind.config.mjs -i ./src/styles/input.css -o ./public/styles/global.css  --minify --watch"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "^10.0.2",
     "@astrojs/mdx": "^2.2.3",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.5.2",
     "astro": "^4.5.1",
     "astro-compress": "^2.2.11",
     "autoprefixer": "^10.4.18",
