--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/mdx": "^2.2.3",
     "@astrojs/tailwind": "^5.1.0",
     "@astrojs/vercel": "^7.5.2",
+    "@vercel/speed-insights": "^1.0.10",
     "astro": "^4.5.1",
     "astro-compress": "^2.2.11",
     "autoprefixer": "^10.4.18",
